# api-switch-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: auth.rs  circuit_breaker.rs  db.rs  handlers.rs  main.rs  models.rs
static/: index.html
