[package]
name = "api-switch"
version = "0.5.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
redis = { version = "0.25", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
futures = "0.3"
